--- a/Curso_Python_32h_Aula06.ipynb
+++ b/Curso_Python_32h_Aula06.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula06.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNHbtNJb8EBiEaazGs7Yosv",
+      "authorship_tag": "ABX9TyMhYvdHKq8uUyQCxmxOBVjx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -584,6 +584,8 @@
       "source": [
         "#Orientação a objetos\n",
         "\n",
+        "É um paradigma de programação em que o seu foco não está nos procedimentos do ambiente, mas sim nos seus objetos existentes. É um ponto de vista diferente, uma nova forma de descrever um ponto de vista nos sistemas.\n",
+        "\n",
         "Modelar sistemas utilizando objetos - conjunto de componentes autocontido\n",
         "\n",
         "Um objeto tem comportamento e características\n",
@@ -591,7 +593,30 @@
         "Linguagens que iniciaram a POO\n",
         "- Simula 67 - década de 60\n",
         "- SmallTalk - década de 70\n",
-        "- C++ - década de 80\n"
+        "- C++ - década de 80\n",
+        "\n",
+        "##Abstração\n",
+        "\n",
+        "trazer do mundo real conceitos para dentro dos sistemas.\n",
+        "- Entidade (Classe) Cachorro\n",
+        "- Características (atributos): peso, cor, altura, raça\n",
+        "- Ações (métodos): latir, caminhar, cavar_buraco, farejar, urinar, perseguir...\n",
+        "\n",
+        "- Cliente\n",
+        "- atributos: nome, cpf, endereço, telefone...\n",
+        "- ações: comprar, cancelar compra, devolver produto...\n",
+        "\n",
+        "##Classes\n",
+        "Descreve um conjunto de objetos que contém propriedades, comportamentos, relacionamentos e significado em comum. Uma classe é um \"esqueleto\" ou \"forma\" para criar objeto.\n",
+        "\n",
+        "##Atributos\n",
+        "São propriedades, características\n",
+        "\n",
+        "##Métodos\n",
+        "São as ações, comportamento, conjunto de operações que a classe fornece para os objetos.\n",
+        "\n",
+        "##Identidade\n",
+        "Cada objeto é único no sistema"
       ],
       "metadata": {
         "id": "72edwOkCrfwq"
@@ -599,14 +624,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
-        "id": "xVtPHfoGqq6_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xVtPHfoGqq6_",
+        "outputId": "666f598f-9018-4e8a-e4c7-6d22077f601d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cachorro: Tóto, peso: 10 cor: Caramelo altura:60\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Cachorro:\n",
+        "  \n",
+        "  def __init__(self, nome, peso, cor, altura):\n",
+        "    self.nome = nome\n",
+        "    self.peso = peso\n",
+        "    self.cor = cor\n",
+        "    self.altura = altura\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f\"Cachorro: {self.nome}, peso: {self.peso}\"\\\n",
+        "            +f\" cor: {self.cor} altura:{self.altura}\"\n",
+        "    #texto = \"Cachorro:\" + self.nome + \" peso:\" + str(self.peso)\\\n",
+        "    #      +\" cor:\" + self.cor + \" altura:\" + str(self.altura)\n",
+        "    #return texto\n",
+        "\n",
+        "  def latir():\n",
+        "    print(\"Au au\")\n",
+        "\n",
+        "toto = Cachorro(nome = \"Tóto\", peso = 10, cor = \"Caramelo\", altura = 60)\n",
+        "print(toto)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "iyqLCHeZUYF5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
