--- a/Curso_Python_32h_Aula06.ipynb
+++ b/Curso_Python_32h_Aula06.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula06.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMhYvdHKq8uUyQCxmxOBVjx",
+      "authorship_tag": "ABX9TyNapZjd2fF7kC2XxW5+ENBL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -616,7 +616,13 @@
         "São as ações, comportamento, conjunto de operações que a classe fornece para os objetos.\n",
         "\n",
         "##Identidade\n",
-        "Cada objeto é único no sistema"
+        "Cada objeto é único no sistema\n",
+        "\n",
+        "##Instanciação de objetos\n",
+        "Os objetos são instâncias das classes. Cada objeto contém atributos e métodos e cada objeto é único (identidade)\n",
+        "\n",
+        "##Construtor\n",
+        "É um método especial que é chamado quando um objeto é criado."
       ],
       "metadata": {
         "id": "72edwOkCrfwq"
@@ -624,20 +630,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xVtPHfoGqq6_",
-        "outputId": "666f598f-9018-4e8a-e4c7-6d22077f601d"
+        "outputId": "c44b199f-3191-48b0-f44e-1dd62fac70db"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cachorro: Tóto, peso: 10 cor: Caramelo altura:60\n"
+            "Cachorro: Tóto, peso: 10 cor: Caramelo altura:60\n",
+            "Au\n",
+            "São diferentes\n",
+            "São iguais\n"
           ]
         }
       ],
@@ -657,23 +666,161 @@
         "    #      +\" cor:\" + self.cor + \" altura:\" + str(self.altura)\n",
         "    #return texto\n",
         "\n",
-        "  def latir():\n",
-        "    print(\"Au au\")\n",
+        "  def latir(self):\n",
+        "    if self.peso <= 4:\n",
+        "      print(\"Au au au au\")\n",
+        "    elif self.peso <= 6:\n",
+        "      print(\"Auau\")\n",
+        "    else: \n",
+        "      print(\"Au\")\n",
         "\n",
         "toto = Cachorro(nome = \"Tóto\", peso = 10, cor = \"Caramelo\", altura = 60)\n",
-        "print(toto)"
+        "print(toto)\n",
+        "toto.latir()\n",
+        "toto2 = Cachorro(nome = \"Tóto\", peso = 10, cor = \"Caramelo\", altura = 60)\n",
+        "if toto == toto2:\n",
+        "  print(\"São iguais\")\n",
+        "else:\n",
+        "  print(\"São diferentes\")\n",
+        "\n",
+        "toto = toto2\n",
+        "#o primeiro toto (o objeto) perde a referência\n",
+        "#o primeiro toto fica \"órfão\"\n",
+        "#o primeiro (o objeto) é eliminado pelo garbage collector (GC)\n",
+        "if toto == toto2:\n",
+        "  print(\"São iguais\")\n",
+        "else:\n",
+        "  print(\"São diferentes\")\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "toto3 = Cachorro(\"Mel\", 6.5, \"Branco\", 40)\n",
+        "toto4 = Cachorro(\"Preta\", 7, \"Preta\", 50)\n",
+        "toto5 = Cachorro(\"Belinha\", 5, \"Marrom\", 70)\n",
+        "salsicha = Cachorro(\"Salsicha\", 4, \"Caramelo\", 30)\n",
+        "toto6 = Cachorro(\"Mel\", 7, \"Marrom\", 60)\n",
+        "\n",
+        "lista_cachorros = [toto2, toto3, toto4, toto5, salsicha]\n",
+        "for cachorro in lista_cachorros:\n",
+        "  print(cachorro)\n",
+        "  print(cachorro.latir())"
       ],
       "metadata": {
-        "id": "iyqLCHeZUYF5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iyqLCHeZUYF5",
+        "outputId": "fe5c863c-f5d9-4072-eaf7-ac0b5636e71b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cachorro: Tóto, peso: 10 cor: Caramelo altura:60\n",
+            "Au\n",
+            "None\n",
+            "Cachorro: Mel, peso: 6.5 cor: Branco altura:40\n",
+            "Au\n",
+            "None\n",
+            "Cachorro: Preta, peso: 7 cor: Preta altura:50\n",
+            "Au\n",
+            "None\n",
+            "Cachorro: Belinha, peso: 5 cor: Marrom altura:70\n",
+            "Auau\n",
+            "None\n",
+            "Cachorro: Salsicha, peso: 4 cor: Caramelo altura:30\n",
+            "Au au au au\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if toto3.nome == toto6.nome:\n",
+        "  print(\"nomes iguais\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wp-Bu3HGgZ7y",
+        "outputId": "1b8e2add-2cd0-45f4-9415-6ecc7494fb0b"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nomes iguais\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#dESAFIO 05"
+      ],
+      "metadata": {
+        "id": "NH3hXlDmms7e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"Crie uma classe Pessoa que tenha atributos nome, altura, peso e data de\n",
+        "nascimento (separar por dia, mês e ano). Faça um método para mostrar na\n",
+        "tela o seu IMC e qual é a faixa de peso em que a pessoa se encontra.\"\"\"\n",
+        "\n",
+        "class Pessoa:\n",
+        "  def __init__(self, nome, altura, peso, data):\n",
+        "    self.nome = nome\n",
+        "    self.altura = altura\n",
+        "    self.peso = peso\n",
+        "    self.data = data\n",
+        "\n",
+        "  def mostrar_IMC(self):\n",
+        "    self.imc = self.peso/(self.altura * self.altura)\n",
+        "    if self.imc < 18.5:\n",
+        "      self.faixa = \"Baixo Peso\"\n",
+        "    elif self.imc < 25:\n",
+        "      self.faixa = \"Peso Normal\"\n",
+        "    elif self.imc < 30:\n",
+        "      self.faixa = \"Acima do peso\"\n",
+        "    else:\n",
+        "      self.faixa = \"Obeso\"\n",
+        "    print(f\"O IMC de {self.nome} é de {self.imc} - {self.faixa}\")\n",
+        "\n",
+        "p = Pessoa(\"Cleiton\", 1.70, 70, \"01/01/1999\")\n",
+        "p.mostrar_IMC()\n",
+        "p2 = Pessoa(\"Fulano\", 1.80, 50, \"02/02/2002\")\n",
+        "p2.mostrar_IMC()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gJYEIFMZfdsn",
+        "outputId": "6aef1f60-58fb-4f22-c99c-f92ecdf27d4c"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O IMC de Cleiton é de 24.221453287197235 - Peso Normal\n",
+            "O IMC de Fulano é de 15.432098765432098 - Baixo Peso\n"
+          ]
+        }
+      ]
     }
   ]
 }
